first ready to use version

--- a/_docs/README.md.html
+++ b/_docs/README.md.html
@@ -149,7 +149,7 @@ Execpt the option <code>--group</code> tt's also possible to define your own def
 <li><strong>-p --port</strong> : <em>( <code>Numner</code> optional: default = <code>6379</code> )</em> Redis port</li>
 <li><strong>-n --ns</strong> : <em>( <code>String</code> optional: default = <code>rsmq</code> )</em> RSMQ namespace</li>
 <li><strong>-q --qname</strong> : <em>( <code>String</code> optional )</em> RSMQ queuename.</li>
-<li><strong>--group</strong> : <em>( <code>String</code> optional )</em> RSMQ client configuration group.</li>
+<li><strong>--profile</strong> : <em>( <code>String</code> optional )</em> RSMQ client configuration profile.</li>
 </ul>
 
 
