--- a/_docs/README.md.html
+++ b/_docs/README.md.html
@@ -18,12 +18,6 @@
     </div>
     <div id="tree"></div>
     <div id="headings">
-      <div class="heading h1">
-        <a href="#rsmq-cli">rsmq-cli</a>
-      </div>
-      <div class="heading h1">
-        <a href="#under%20develpoment">Under Develpoment</a>
-      </div>
       <div class="heading h2">
         <a href="#install">Install</a>
       </div>
@@ -75,14 +69,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container"><div class="docs markdown">
-<div class="pilwrap" id="rsmq-cli">
-  <h1>
-    <a href="#rsmq-cli" name="rsmq-cli" class="pilcrow">&#182;</a>
-    rsmq-cli
-  </h1>
-</div>
-
+  <div id="container"><div class="docs markdown"><p><img src="https://cloud.githubusercontent.com/assets/300631/6473205/3a4ebe86-c1f8-11e4-941b-232520278dda.png" alt="rsmq-cli" title="" /></p>
 
 <p><a href="http://travis-ci.org/mpneuried/rsmq-cli"><img src="https://secure.travis-ci.org/mpneuried/rsmq-cli.png?branch=master" alt="Build Status" title="" /></a>
 <a href="https://david-dm.org/mpneuried/rsmq-cli"><img src="https://david-dm.org/mpneuried/rsmq-cli.png" alt="Build Status" title="" /></a>
@@ -91,19 +78,6 @@
 <p>A RSMQ terminal client.</p>
 
 <p><a href="https://nodei.co/npm/rsmq-cli/"><img src="https://nodei.co/npm/rsmq-cli.png?downloads=true&amp;stars=true" alt="NPM" title="" /></a></p>
-
-
-<div class="pilwrap" id="under%20develpoment">
-  <h1>
-    <a href="#under%20develpoment" name="under%20develpoment" class="pilcrow">&#182;</a>
-    Under Develpoment
-  </h1>
-</div>
-
-
-<p><strong>This module is currently in an early development status. So do not use it in production!</strong></p>
-
-<p>status: <strong>API/Interface concept</strong></p>
 
 
 <div class="pilwrap" id="install">
